# django-risk-guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
risk_guardian/: __init__.py  apps.py  assessment.py  conf.py  decorators.py  history.py  middleware.py  receivers.py  signals.py
risk_guardian/analyzers/: __init__.py  base.py  email.py  pattern.py  rate.py  session.py  timing.py  user_agent.py
risk_guardian/management/commands/: audit_emails.py
tests/: conftest.py  factories.py  settings.py  test_analyzers.py  test_email_analyzer.py  test_history.py  test_middleware.py
